# softlight-agent

./: .gitignore  Cargo.toml
src/: executor.rs  lib.rs  main.rs  output.rs  state_capture.rs
src/browser/: browser_constroller.rs  mod.rs  page_extension.rs
src/models/: action.rs  captured_state.rs  cookie.rs  dataset_index.rs  element_state.rs  execution_result.rs  metadata.rs  mod.rs  models.rs  page_metadata.rs  scroll_direction.rs  setup.rs  step.rs  task.rs  viewport_info.rs  wait_condition.rs
tasks/: github-explore-repo.yaml
